Fix delete button not working on mobile version problem

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1815,9 +1815,6 @@ select {
 .bottom-\[3px\] {
   bottom: 3px;
 }
-.top-\[-12px\] {
-  top: -12px;
-}
 .z-0 {
   z-index: 0;
 }
@@ -1926,23 +1923,11 @@ select {
 .mt-5 {
   margin-top: 1.25rem;
 }
-.-mr-2 {
-  margin-right: -0.5rem;
-}
 .ml-5 {
   margin-left: 1.25rem;
 }
 .mt-\[64px\] {
   margin-top: 64px;
-}
-.ml-8 {
-  margin-left: 2rem;
-}
-.ml-9 {
-  margin-left: 2.25rem;
-}
-.mb-0 {
-  margin-bottom: 0px;
 }
 .block {
   display: block;
@@ -1971,6 +1956,9 @@ select {
 .h-20 {
   height: 5rem;
 }
+.h-\[16px\] {
+  height: 16px;
+}
 .h-8 {
   height: 2rem;
 }
@@ -1992,11 +1980,11 @@ select {
 .h-\[24px\] {
   height: 24px;
 }
-.h-10 {
-  height: 2.5rem;
-}
 .h-6 {
   height: 1.5rem;
+}
+.h-10 {
+  height: 2.5rem;
 }
 .h-4 {
   height: 1rem;
@@ -2009,21 +1997,6 @@ select {
 }
 .h-1\/3 {
   height: 33.333333%;
-}
-.h-32 {
-  height: 8rem;
-}
-.h-\[100px\] {
-  height: 100px;
-}
-.h-\[96px\] {
-  height: 96px;
-}
-.h-\[84px\] {
-  height: 84px;
-}
-.h-\[16px\] {
-  height: 16px;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -2058,6 +2031,15 @@ select {
 .w-48 {
   width: 12rem;
 }
+.w-\[32px\] {
+  width: 32px;
+}
+.w-\[84px\] {
+  width: 84px;
+}
+.w-\[18px\] {
+  width: 18px;
+}
 .w-6 {
   width: 1.5rem;
 }
@@ -2066,27 +2048,6 @@ select {
 }
 .w-\[180px\] {
   width: 180px;
-}
-.w-\[16px\] {
-  width: 16px;
-}
-.w-\[32px\] {
-  width: 32px;
-}
-.w-\[84px\] {
-  width: 84px;
-}
-.w-\[230px\] {
-  width: 230px;
-}
-.w-\[28px\] {
-  width: 28px;
-}
-.w-\[36px\] {
-  width: 36px;
-}
-.w-\[18px\] {
-  width: 18px;
 }
 .max-w-xl {
   max-width: 36rem;
@@ -2208,15 +2169,6 @@ select {
 }
 .self-center {
   align-self: center;
-}
-.justify-self-start {
-  justify-self: start;
-}
-.justify-self-end {
-  justify-self: end;
-}
-.justify-self-center {
-  justify-self: center;
 }
 .overflow-hidden {
   overflow: hidden;
@@ -2352,10 +2304,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
-.bg-indigo-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(238 242 255 / var(--tw-bg-opacity));
-}
 .bg-\[\#fcb414\] {
   --tw-bg-opacity: 1;
   background-color: rgb(252 180 20 / var(--tw-bg-opacity));
@@ -2364,9 +2312,9 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(244 244 244 / var(--tw-bg-opacity));
 }
-.bg-\[\#d3e2dd\] {
+.bg-indigo-50 {
   --tw-bg-opacity: 1;
-  background-color: rgb(211 226 221 / var(--tw-bg-opacity));
+  background-color: rgb(238 242 255 / var(--tw-bg-opacity));
 }
 .bg-clip-padding {
   background-clip: padding-box;
@@ -2457,13 +2405,16 @@ select {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
 .py-2\.5 {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
 }
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
+.pb-\[120px\] {
+  padding-bottom: 120px;
 }
 .pt-8 {
   padding-top: 2rem;
@@ -2486,6 +2437,9 @@ select {
 .pl-10 {
   padding-left: 2.5rem;
 }
+.pl-5 {
+  padding-left: 1.25rem;
+}
 .pt-6 {
   padding-top: 1.5rem;
 }
@@ -2506,24 +2460,6 @@ select {
 }
 .pr-16 {
   padding-right: 4rem;
-}
-.pb-8 {
-  padding-bottom: 2rem;
-}
-.pl-5 {
-  padding-left: 1.25rem;
-}
-.pb-\[48px\] {
-  padding-bottom: 48px;
-}
-.pb-\[100px\] {
-  padding-bottom: 100px;
-}
-.pb-\[160px\] {
-  padding-bottom: 160px;
-}
-.pb-\[120px\] {
-  padding-bottom: 120px;
 }
 .text-center {
   text-align: center;
@@ -2561,10 +2497,6 @@ select {
   font-size: 1.5rem;
   line-height: 2rem;
 }
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
 .font-medium {
   font-weight: 500;
 }
@@ -2579,9 +2511,6 @@ select {
 }
 .uppercase {
   text-transform: uppercase;
-}
-.capitalize {
-  text-transform: capitalize;
 }
 .italic {
   font-style: italic;
@@ -2603,9 +2532,6 @@ select {
 }
 .tracking-wider {
   letter-spacing: 0.05em;
-}
-.tracking-wide {
-  letter-spacing: 0.025em;
 }
 .text-gray-500 {
   --tw-text-opacity: 1;
@@ -3074,9 +3000,6 @@ body.inactive {
 .hover\:fill-yellow:hover {
   fill: #fdb515;
 }
-.hover\:fill-white:hover {
-  fill: #ffffff;
-}
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -3412,10 +3335,6 @@ body.inactive {
     margin-top: 0px;
   }
 
-  .md\:ml-6 {
-    margin-left: 1.5rem;
-  }
-
   .md\:block {
     display: block;
   }
@@ -3484,10 +3403,6 @@ body.inactive {
     align-self: center;
   }
 
-  .md\:justify-self-end {
-    justify-self: end;
-  }
-
   .md\:overflow-y-auto {
     overflow-y: auto;
   }
@@ -3502,14 +3417,6 @@ body.inactive {
 
   .md\:rounded-br-\[35px\] {
     border-bottom-right-radius: 35px;
-  }
-
-  .md\:border-4 {
-    border-width: 4px;
-  }
-
-  .md\:border-r-4 {
-    border-right-width: 4px;
   }
 
   .md\:border-r-8 {
@@ -3543,24 +3450,12 @@ body.inactive {
     --tw-bg-opacity: 0.7;
   }
 
-  .md\:fill-green {
-    fill: #056839;
-  }
-
-  .md\:fill-grey-dark {
-    fill: #5F6368;
-  }
-
   .md\:fill-yellow {
     fill: #fdb515;
   }
 
-  .md\:fill-white {
-    fill: #ffffff;
-  }
-
-  .md\:p-5 {
-    padding: 1.25rem;
+  .md\:fill-grey-dark {
+    fill: #5F6368;
   }
 
   .md\:px-12 {
@@ -3568,14 +3463,9 @@ body.inactive {
     padding-right: 3rem;
   }
 
-  .md\:px-5 {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-  }
-
-  .md\:py-3 {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
+  .md\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
 
   .md\:px-0 {
@@ -3593,43 +3483,26 @@ body.inactive {
     padding-bottom: 0.5rem;
   }
 
-  .md\:px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-  }
-
   .md\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
   }
 
-  .md\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
+  .md\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
   }
 
   .md\:pt-2 {
     padding-top: 0.5rem;
   }
 
-  .md\:pb-\[120px\] {
-    padding-bottom: 120px;
-  }
-
-  .md\:pl-5 {
-    padding-left: 1.25rem;
-  }
-
-  .md\:pr-2 {
-    padding-right: 0.5rem;
+  .md\:pb-\[160px\] {
+    padding-bottom: 160px;
   }
 
   .md\:pl-0 {
     padding-left: 0px;
-  }
-
-  .md\:pb-\[160px\] {
-    padding-bottom: 160px;
   }
 
   .md\:text-left {
